# iminuit

./: .appveyor.yml  .clang-format  .coveragerc  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CITATION  CITATION.cff  CITATION.rst  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  UpdateNotes.rst  api.html  azure-steps.yml  azure-tests.yml  cmake.py  cmake_ext.py  dev-requirements.txt  environment-dev.yml  genc  genindex.html  index.html  macos-install-python.sh  minuit2_cxx.lst  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  python_releases.py  requirements-dev.txt  requirements.txt  search.html  (+12 more)
.ci/: azure-build-pipeline.yml  azure-pipeline-build.yml  azure-pipeline-test.yml  azure-publish-dist.yml  azure-setup.yml  azure-steps.yml  azure-tests.yml  build-wheels.sh  download_artifacts.py  download_azure_artifacts.py  gammapy_integration_test.sh  get_tag.py  get_version.py  install_build_env.py  install_deps.py  install_extra.py  install_pypy3.6.sh  install_pypy36.py  install_pypy36.sh  macos-install-python.sh  probfit_integration_test.sh  release_check.py  requirements-build.txt  requirements-test.txt  root_version.py  travis_install_deps.py  version_check.py
.travis/: conda_make.sh  install_deps.py
Minuit/: BuildFile  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.in  import_minuit2.py  makefile.msc
Minuit/Minuit/: ABObj.h  ABProd.h  ABSum.h  ABTypes.h  AnalyticalGradientCalculator.h  BasicFunctionGradient.h  BasicFunctionMinimum.h  BasicMinimumError.h  BasicMinimumParameters.h  BasicMinimumSeed.h  BasicMinimumState.h  CombinedMinimizer.h  CombinedMinimumBuilder.h  ContoursError.h  DavidonErrorUpdator.h  FCNBase.h  FCNGradientBase.h  FumiliBuilder.h  FumiliChi2FCN.h  FumiliErrorUpdator.h  FumiliFCNBase.h  FumiliGradientCalculator.h  FumiliMaximumLikelihoodFCN.h  FumiliMinimizer.h  FumiliStandardChi2FCN.h  FumiliStandardMaximumLikelihoodFCN.h  FunctionGradient.h  FunctionMinimizer.h  FunctionMinimum.h  GenericFunction.h  GradientCalculator.h  HessianGradientCalculator.h  InitialGradientCalculator.h  LASymMatrix.h  LAVector.h  LaInverse.h  LaOuterProduct.h  LaProd.h  LaSum.h  Makefile.am  (+67 more)
Minuit/doc/: Makefile.in
Minuit/inc/: Makefile.in
Minuit/inc/Math/: Error.h  Functor.h  GenAlgoOptions.h  IFunction.h  Makefile.in  Minimizer.h  Util.h
Minuit/inc/Minuit2/: AnalyticalGradientCalculator.h  BasicMinimumState.h  CombinedMinimizer.h  CombinedMinimumBuilder.h  ContoursError.h  DavidonErrorUpdator.h  FCNBase.h  FumiliBuilder.h  FumiliChi2FCN.h  FumiliErrorUpdator.h  FumiliGradientCalculator.h  FumiliMaximumLikelihoodFCN.h  FumiliMinimizer.h  FumiliStandardChi2FCN.h  FumiliStandardMaximumLikelihoodFCN.h  FunctionGradient.h  GradientCalculator.h  HessianGradientCalculator.h  InitialGradientCalculator.h  LaProd.h  LaSum.h  Makefile.in  MinimumBuilder.h  MinimumErrorUpdator.h  MinimumState.h  Minuit2Minimizer.h  MinuitParameter.h  MnApplication.h  MnConfig.h  MnMigrad.h  MnParabolaFactory.h  MnPrint.h  MnRefCountedPointer.h  MnStrategy.h  MnUserCovariance.h  MnUserParameterState.h  MnUserParameters.h  MnUserTransformation.h  ModularFunctionMinimizer.h  Numerical2PGradientCalculator.h  (+7 more)
Minuit/msvc7.1/: Makefile.am  Makefile.in
Minuit/msvc7.1/Minuit/: Makefile.am  Makefile.in  Minuit.sln  Minuit.vcproj  gendef.py
Minuit/src/: AnalyticalGradientCalculator.cpp  BasicMinimumError.cpp  CombinedMinimumBuilder.cpp  DavidonErrorUpdator.cpp  DavidonErrorUpdator.cxx  FumiliBuilder.cpp  FumiliBuilder.cxx  FumiliErrorUpdator.cpp  FumiliGradientCalculator.cpp  FumiliGradientCalculator.cxx  FumiliMinimizer.cpp  FumiliStandardChi2FCN.cpp  FumiliStandardChi2FCN.cxx  FumiliStandardMaximumLikelihoodFCN.cpp  FumiliStandardMaximumLikelihoodFCN.cxx  GenAlgoOptions.cxx  HessianGradientCalculator.cpp  InitialGradientCalculator.cpp  InitialGradientCalculator.cxx  LaEigenValues.cpp  LaEigenValues.cxx  LaInnerProduct.cpp  LaInverse.cpp  LaOuterProduct.cpp  LaSumOfElements.cpp  LaVtMVSimilarity.cpp  Makefile.am  Makefile.in  MinimizerOptions.cxx  Minuit2Minimizer.cxx  MnApplication.cpp  MnContours.cpp  MnCovarianceSqueeze.cpp  MnEigen.cpp  MnFcn.cpp  MnFumiliMinimize.cpp  MnFunctionCross.cpp  MnFunctionCross.cxx  MnGlobalCorrelationCoeff.cpp  MnHesse.cpp  (+62 more)
Minuit/test/: Makefile.in
Minuit/test/MnSim/: GaussFcn.h  GaussFcn2.h  Makefile.in  PaulTest4.cxx  ReneTest.cxx
Minuit/test/MnTutorial/: Makefile.in
Minuit/tests/: Makefile.in
Minuit/tests/MnSim/: BuildFile  DemoFumili.cpp  DemoGaussSim.cpp  FlatRandomGen.h  GaussDataGen.cpp  GaussDataGen.h  GaussFcn.cpp  GaussFcn.h  GaussFcn2.cpp  GaussFcn2.h  GaussFunction.h  GaussRandomGen.h  GaussianModelFunction.h  Makefile.am  Makefile.in  PaulTest.cpp  PaulTest2.cpp  PaulTest3.cpp  PaulTest4.cpp  ReneTest.cpp
Minuit/tests/MnTutorial/: BuildFile  Makefile.am  Makefile.in  Quad12F.h  Quad12FMain.cpp  Quad1F.h  Quad1FMain.cpp  Quad4F.h  Quad4FMain.cpp  Quad8F.h  Quad8FMain.cpp
RTMinuit/: FCN.c  FCN.pyx  HtmlFrontend.py  Lcg_Minuit.pxi  Minuit.py  PythonFCN.h  RTMinuit.cpp  RTMinuit.py  RTMinuitWarnings.py  __init__.py  _libRTMinuit.cpp  _libRTMinuit.pyx  minuit_html.py  newminuit.pyx  util.py
_downloads/: tutorial.html
_sources/: api.txt  index.txt
_static/: rtd.css
bench/: cost.json  plot.ipynb  plot_cost.py  root.json  test_cost.py
binder/: postBuild
ci-scripts/: gammapy_integration_test.sh  install_pypy.sh  install_pypy3.6.sh  travis_conda_make.sh  travis_install_conda.sh  travis_install_deps.py  travis_sdist_test.sh
devscripts/: checkipnb.py  travis_install.sh  travis_script.sh
doc/: Makefile  README.md  about.rst  api.rst  bench.py  benchmark.rst  bibliography.txt  changelog.rst  check_root_version.py  citation.rst  conf.py  contribute.rst  faq.rst  index.rst  index.rst.in  install.rst  installation.rst  nutshell.rst  reference.rst  references.txt  release.md  root_version.py  rtd-pip-requirements  studies.rst  tutorials.rst  update_changelog.py
docs/: citation.rst  release.md
iminuit/: Minuit2.pxi  (+26 more)
(+304 files in other folders)
