[metadata]
name = iminuit
version = attr: iminuit.__version__
description = Jupyter-friendly Python frontend for MINUIT2 in C++
author = Hans Dembinski and the iminuit team
author_email = hans.dembinski@gmail.com
url = http://github.com/scikit-hep/iminuit
project_urls =
    Documentation = https://iminuit.readthedocs.io
    Bug Tracker = https://github.com/scikit-hep/iminuit/issues
license = MIT+LGPL
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
package_dir =
    = src
packages = iminuit
python_requires = >=3.6
install_requires = numpy

[options.extras_require]
test =
    cmake
    cython
    flake8
    ipykernel
    jax
    jaxlib
    jupyter_client
    matplotlib
    nbconvert
    nbformat
    numba
    numba-stats
    numpy
    pre-commit
    pydocstyle
    pylint
    pytest
    pytest-cov
    scipy
    sphinx
    sphinx_rtd_theme
    tabulate

[check-manifest]
ignore =
    .ci/**
    .clang-format
    .coveragerc
    .gitmodules
    .pre-commit-config.yaml
    Makefile
    doc/**
    requirements-dev.txt
    extern/root/.git
    extern/pybind11/.git
    binder/**
