[metadata]
name = iminuit
version = attr: iminuit.__version__
author = Piti Ongmongkolkul and the iminuit team
maintainer = Hans Dembinski
maintainer_email = hans.dembinski@gmail.com
description = Jupyter-friendly Python frontend for MINUIT2 in C++
license = MIT+LGPL
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/scikit-hep/iminuit
download_url = https://pypi.python.org/pypi/iminuit
project_urls =
    Documentation = https://iminuit.readthedocs.io
    Source Code = http://github.com/scikit-hep/iminuit
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Programming Language :: C++
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
package_dir =
    = src
packages = iminuit
python_requires = >=3.6
install_requires = numpy

[options.extras_require]
test =
    cython
    flake8
    ipykernel
    ipywidgets
    jax
    jaxlib
    joblib
    jacobi
    jupyter_client
    matplotlib
    nbconvert
    nbformat
    numba
    numba-stats
    numpy
    pre-commit
    pydocstyle
    pylint
    pytest
    pytest-cov
    pytest-xdist
    scipy
    sphinx
    sphinx_rtd_theme
    tabulate
    nbsphinx
    boost_histogram
    resample
doc =
    sphinx>=4.1
    sphinx-rtd-theme
    Jinja2==3.0
    nbsphinx

[check-manifest]
ignore =
    .ci/**
    .clang-format
    .coveragerc
    .gitmodules
    .pre-commit-config.yaml
    Makefile
    doc/**
    extern/root/.git
    extern/pybind11/.git
    binder/**

[flake8]
max-line-length = 95
extend-ignore = E203, E712

[pydocstyle]
convention = numpy
