dnl Process this file with autoconf to produce a configure script.
dnl
dnl Author: Paul F. Kunz <Paul_Kunz@slac.stanford.edu>
dnl

AC_INIT(src/MnApplication.cpp)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(Minuit, 1_7_9)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CXX

AC_LANG_CPLUSPLUS

dnl Force libtool to use C++ compiler when checking for PIC 
dnl   for solaris
CC=$CXX

dnl disable static building
dnl AM_DISABLE_STATIC
AM_PROG_LIBTOOL

dnl Checks for libraries.
dnl Get the path to the standard C++ library
PFK_CXX_LIB_PATH

dnl check STD C++ library
AC_CHECK_LIB(stdc++, main, LIBSTDCPP="lstdc++", LIBSTDCPP=)
dnl substitute this value 
AC_SUBST(LIBSTDCPP)

dnl Turn on -Wall if compiling with gcc
AC_COMPILE_WARNINGS

dnl Check for gmake and use it
AC_CHECK_PROG(GMAKE, gmake, gmake, make)
AC_SUBST(GMAKE)

AC_PROG_RANLIB

dnl files to be generated 
AC_OUTPUT(Makefile Minuit/Makefile src/Makefile 
  msvc7.1/Makefile msvc7.1/Minuit/Makefile
  doc/Doxyfile doc/Makefile tests/Makefile tests/MnSim/Makefile 
  tests/MnTutorial/Makefile )

AC_MSG_RESULT([
    Minuit project now configured.
])
